<resources>
    <string name="app_name">dummyDashboard</string>
    <string name="company_logo">Company logo</string>
    <string name="log_in">Log in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="help">help</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="customer_image_desc">Customer_image</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="delete">Delete</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="add_customers">add customers</string>
    <string name="take_photo">Take Photo</string>
    <string name="customer_photo">customer photo</string>
    <string name="username">Username</string>
    <string name="add_customer">Add customer</string>
    <string name="favorite">Favorite</string>
</resources>